; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_clear_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_clear_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_qsv = type { i32*, i32* }

@g_QsvCs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_qsv*)* @clear_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_data(%struct.obs_qsv* %0) #0 {
  %2 = alloca %struct.obs_qsv*, align 8
  store %struct.obs_qsv* %0, %struct.obs_qsv** %2, align 8
  %3 = load %struct.obs_qsv*, %struct.obs_qsv** %2, align 8
  %4 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = call i32 @EnterCriticalSection(i32* @g_QsvCs)
  %9 = load %struct.obs_qsv*, %struct.obs_qsv** %2, align 8
  %10 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @qsv_encoder_close(i32* %11)
  %13 = load %struct.obs_qsv*, %struct.obs_qsv** %2, align 8
  %14 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = call i32 @LeaveCriticalSection(i32* @g_QsvCs)
  %16 = load %struct.obs_qsv*, %struct.obs_qsv** %2, align 8
  %17 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @bfree(i32* %18)
  %20 = load %struct.obs_qsv*, %struct.obs_qsv** %2, align 8
  %21 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  br label %22

22:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @qsv_encoder_close(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1

declare dso_local i32 @bfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
